Fix burger visibility at computer size

--- a/src/components/Layouts/Header/Options/Options.module.css
+++ b/src/components/Layouts/Header/Options/Options.module.css
@@ -72,6 +72,12 @@
 	}
 }
 
+@media(min-width: 700px) {
+	.header__burgerMenu {
+		display: none !important;
+	}
+}
+
 @media (max-width: 700px) {
 	.header__burgerMenu {
 		display: block;
